tests/08-attr-empty.stderr
error: expected `def = "..."`
 --> $DIR/08-attr-empty.rs:5:7
  |
5 |     #[def]
  |       ^^^
